# logc

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile.am  README.adoc  configure.ac  envlog.gperf  format.gperf  gperf.am  logc.c  logc.h  logc_argp.h  logc_argp.pc.in  logc_assert.h  logc_util.h  meson.build  meson_options.txt
.gitlab-ci/: Dockerfile  Dockerfile-alpine  Dockerfile-debian  release.sh
docs/: README.adoc  concurrency.adoc  fork.adoc  gperf.adoc  integration_tests.adoc  logc.adoc  logc_argp.adoc  logc_assert.adoc  logc_asserts.adoc  logc_config.adoc  logc_util.adoc  unittests.adoc
include/: foo.h  logc.h  logc_argp.h  logc_assert.h  logc_asserts.h  logc_config.h  logc_util.h  meson.build
libfoo/: Makefile.am  count.c  foo.pc.in  libfoo.version  log.c  log.h  match.gperf  meson.build
logc/: Makefile.am  bind.c  format.c  format.h  level.c  level.h  liblogc.version  log.c  log.h  logc.c  logc.pc.in  meson.build  origin.c  output.c  output.h  syslog.c  syslog.h  util.h
logc_argp/: Makefile.am  liblogc_argp.version  logc_argp.c  logc_argp.pc.in  meson.build
logc_config/: Makefile.am  liblogc_config.version  logc_config.c  logc_config.pc.in  meson.build  setting_path.c  setting_type.c
src/: Makefile.am  config.c  config.h  foo.c  log.c  log.h  meson.build
subprojects/: logc.wrap
tests/: Makefile.am  fakesyslog.c  fakesyslog.h  fixtures.c  fixtures.h  logc.c  logc.h  logc_argp.c  logc_asserts.c  logc_bind.c  logc_config.c  logc_fixtures.c  logc_fixtures.h  logc_formats.c  logc_syslog.c  meson.build  test-driver.sh  unittests.c
tests/files/: log.conf
tests/run/: Makefile.am  foo.bats  meson.build
tests/unit/: Makefile.am  config.c  count.c  fixtures.c  fixtures.h  meson.build  unittests.c  unittests.h
utils/: gperf.am  lint.am
